# oncall-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  generate_scenarios.py  inference.py  models.py  openenv.yaml  pyproject.toml  train.py
docs/: COMPLETE_FLAWS_AND_FIXES.md  CRITICAL_ANALYSIS.md  HACKATHON_DISCUSSION.md  HOW_IT_WORKS.md  IMPLEMENTATION_PLAN.md  LLM_FAILURE_MODES.md
oncall_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
output/: gemini-2.5-flash  output-gpt4o.txt  output-gpt4omini.txt  output-opus.txt  output-sonnet.txt
scenarios/task1_easy/: scenario_001.json  scenario_002.json  scenario_003.json  scenario_004.json  scenario_005.json  scenario_006.json  scenario_007.json  scenario_008.json  scenario_009.json  scenario_010.json  scenario_011.json  scenario_012.json
scenarios/task2_medium/: scenario_001.json  scenario_002.json  scenario_003.json  scenario_004.json  scenario_005.json  scenario_006.json  scenario_007.json  scenario_008.json  scenario_009.json  scenario_010.json  scenario_011.json  scenario_012.json
scenarios/task3_hard/: scenario_001.json  scenario_002.json  scenario_003.json  scenario_004.json  scenario_005.json  scenario_006.json  scenario_007.json  scenario_008.json  scenario_009.json  scenario_010.json  scenario_011.json  scenario_012.json
scenarios/task4_expert/: scenario_001.json  scenario_002.json  scenario_003.json  (+9 more)
server/: Dockerfile  app.py  environment.py  graders.py  gradio_ui.py  rubric.py  scenario_loader.py  simulator.py  test_oncall.py
